search services overflow fixed

--- a/frontend/frontend/src/components/Services/components/SearchServices.css
+++ b/frontend/frontend/src/components/Services/components/SearchServices.css
@@ -169,7 +169,17 @@
         font-size: clamp(var(--fs-eighteen), 1.5vw, var(--fs-twentyFour));
 
     } */
+
      .card {
         max-height: 50vh;
      }
+}
+
+
+/* 400px */
+
+@media (max-width: 25em) {
+    .card.interview > p {
+        font-size: clamp(var(--fs-fourteen), 1vw, var(--fs-sixteen))
+    }
 }
